# ha-dreame-a2-mower-v2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.claude/commands/: retract.md  verify-fact.md
.github/workflows/: ci.yml
custom_components/dreame_a2_mower/: __init__.py  _camera_lidar.py  _camera_map.py  _camera_views.py  _camera_wifi.py  _coordinator_legacy.py  _devices.py  _lidar_migration.py  _migration.py  _png.py  _render_direction.py  _resources.py  (+46 more)
docs/: DONE.md  TODO.md  cutover.md  data-policy.md  events.md  lessons-from-legacy.md  lidar.md  multi-map.md  observability.md
protocol/: cloud_map_geom.py  mqtt_archive.py  pcd.py  pcd_render.py  session_summary.py  trail_overlay.py
tests/: conftest.py  test_cloud_state_dataclasses.py  test_extract_projection.py  test_render_pre_start_edge_spot.py  test_render_timeline_order.py  test_session_card_timeline.py
tools/: README.md  audit_outstanding_retractions.py  backfill_session_samples.py  backfill_wifi_samples.py  cleanup_entity_orphans.py  entity_inventory_audit.py  install_recovered.py  inventory_audit.py  inventory_gen.py  inventory_probe.py  journal_completeness_check.py  migrate_sessions_to_track.py  probe_add_maintenance_point.py  probe_cruise_to_point.py  promote-latest.sh  rebuild_session.py  recover_sessions.py  release.sh  retrofit_local_legs.py  state_machine_audit.py  state_machine_audit_checks.py  state_machine_audit_discover.py  state_machine_audit_expectations.yaml  state_machine_audit_fake_coord.py  state_machine_audit_render.py  state_partition.py
(+528 files in other folders)
